selfhost/test/typechecker/match/error_exhaustive_Bool_literal.out
Error at %FILE_NAME%:5:3
Unreachable match case
  |    _ => 3
       ^
The previous case(s) cover all possibilities for match target type 'Bool'
