selfhost/test/typechecker/match/error_exhaustive_Bool_literal.abra
val b = true
val x = match b {
  true => 1
  false => 2
  _ => 3
}
